@@ -34,6 +34,12 @@
 #    include "errno.h"
 #  endif
 
+// forward-declaration for _exception struct; prevents warning message
+// ../include/stdlib.h(817) : warning C4115: '_exception' : named type definition in parentheses
+#  if defined(_STLP_WCE_EVC3)
+struct _exception;
+#  endif
+
 #  include _STLP_NATIVE_C_HEADER(stdlib.h)
 
 /* on evc3/evc4 including stdlib.h also defines setjmp macro */
